feat: add public author directory
